render tasks list in DOM

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <input type="text" id="taskInput" placeholder="Digite uma tarefa" />
     <button id="addTaskBtn">Adicionar</button>
 
+    <ul id="taskList">
+      
+    </ul>
+
     <script src="script.js"></script>
   </body>
 </html>
